[project]
name = "epub2pdf"
version = "1.0.0"
description = "Convert fixed-layout EPUBs into large-screen-friendly PDFs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.1",
    "pillow>=12.0.0",
    "tqdm>=4.67.1",
]
authors = [
    { name = "epub2pdf Authors" },
]
license = { text = "MIT" }

[project.scripts]
epub2pdf = "epub2pdf:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "C4", "I", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
